Add proper unit tests and documentation for TextField and ValidField.
git-svn-id: https://svn.eu.apache.org/repos/asf/jakarta/tapestry/trunk@244277 13f79535-47bb-0310-9956-ffa450edef68